# string_views

./: .clang-format  CMakeLists.txt  LICENSE  conanfile.py  readme.adoc
include/string_views/: string_views.hpp
tests/: CMakeLists.txt  test.bool.index.ct.cpp  test.checked_access.cpp  test.contentpolicy.substr.ct.cpp  test.cpp  test.crippled.substr.ct.cpp  test.explicit.charp.ct.cpp  test.explicit.implicit_view.ct.cpp  test.explicit.string.ct.cpp  test.foo.hpp  test.format.explicit.ct.cpp  test.format.implicit.ct.cpp  test.nullptr.ct.cpp  test.nz.c_str.ct.cpp
tests/conan/: CMakeLists.txt  conanfile.txt  test.cassert.ct.cpp  test.cassert.success.cpp  test.cterminate.ct.cpp  test.unreachable.ct.cpp  test.unreachable.success.cpp
